# Strava_Tracker

./: .buildinfo  .gitignore  .gitmodules  .mapbox_token  0. Fetch_Strava_Data.html  0. Fetch_Strava_Data.ipynb  1. gpx_parsing.html  1. gpx_parsing.ipynb  2. Track_Analysis.html  2. Track_Analysis.ipynb  3. Sector_Visualization.html  3. Sector_Visualization.ipynb  Genetic_Algorithm.html  Genetic_Algorithm.ipynb  Getting_Data.html  Getting_Data.md  Importing_GPX_Data.html  Importing_GPX_Data.ipynb  KML_Parser.py  README.html  README.md  Sector_Visualization.ipynb  Untitled.ipynb  Utilities.py  Visualize_GA_Performance.html  Visualize_GA_Performance.ipynb  _config.yml  _toc.yml  bike_data.db  bike_sectors.kml  build_png.sh  content.html  genindex.html  gpx_parser.py  gpx_parsing.ipynb  intro.html  intro.md  objects.inv  requirements.txt  run_ga.sh  (+3 more)
.github/workflows/: deploy-book.yml
_sources/: 0. Fetch_Strava_Data.ipynb  Genetic_Algorithm.ipynb  Getting_Data.md  README.md  intro.md
cpp/: CMakeLists.txt
cpp/src/: Accumulator.hpp  Blocking_Queue.hpp  CMakeLists.txt  Context.hpp  DB_Point.cpp  DB_Point.hpp  DB_Utils.cpp  DB_Utils.hpp  Exit_Condition.cpp  Exit_Condition.hpp  GA_Config.hpp  GDAL_Utilities.cpp  GDAL_Utilities.hpp  Genetic_Algorithm.hpp  Geometry.hpp  KML_Writer.cpp  KML_Writer.hpp  Options.cpp  Options.hpp  Point.cpp  Point.hpp  QuadTree.hpp  Rect.hpp  Sector_Runner.cpp  Sector_Runner.hpp  Stats_Aggregator.cpp  Stats_Aggregator.hpp  Thread_Pool.hpp  WaypointList.cpp  WaypointList.hpp  Write_Worker.cpp  Write_Worker.hpp  route_finder.cpp
cpp/test/: CMakeLists.txt  TEST_Accumulator.cpp  TEST_DB_Utils.cpp  TEST_GDAL_Utilities.cpp  TEST_Geometry.cpp  TEST_KML_Writer.cpp  TEST_Point.cpp  TEST_QuadTree.cpp  TEST_Rect.cpp  TEST_Thread_Pool.cpp  TEST_WaypointList.cpp  Utilities.cpp  Utilities.hpp  route_finder_test.cpp
cpp/unit_test_data/: bike_data.db  sector_2_edge_cases.csv  sector_2_test_route.csv
datasets/: ride.20201120.gpx  ride.20201123.gpx  ride.20201130.gpx  ride.20201209.gpx
prinpy/: glob.py
report/: _config.yml  _toc.yml
